<resources>
    <string name="app_name">CarMate&amp;Go</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_search">Search</string>
    <string name="setCurrentLocation">Posición Actual</string>
    <string name="hintSearch">Pamplona</string>
    <string name="whiteString" />
    <string name="destino">Destino</string>
    <string name="origen">Origen</string>
    <string name="titulo"><![CDATA[CARMATE&GO]]></string>
    <string name="background">background</string>
    <string name="fecha">Fecha</string>
    <string name="publicar_viaje">Publicar Viaje</string>
    <string name="mensaje"><![CDATA[Descubre cuánto ahorras en un viaje con CarMate&Go.]]></string>
    <string name="buscar_viaje">Buscar Viaje</string>
    <string name="mensaje_buscar">Miles de viajes a muy buen precio.</string>
    <string name="vehicle_make">Fabricante</string>
    <string name="vehicle_model">Modelo</string>
    <string name="vehicle_year">Anyo</string>
    <string name="vehicle_color">Color</string>
    <string name="vehicle_license_plate">Matricula</string>
    <string name="submit">Guardar</string>
    <string name="comment_hint">Escribe aqui tu comentario</string>
    <string name="submit_rating">Enviar</string>
</resources>