<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="@drawable/rounded_edittext_background"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:fontFamily="@font/robotoblack"
        android:textFontWeight="900"
        android:elegantTextHeight="true"
        android:textAlignment="center"
        android:textColor="#6E6F70"
        android:gravity="center"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/divView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Primer EditText -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="286dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblOriginSearch"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/input"
                    android:elegantTextHeight="true"
                    android:elevation="20dp"
                    android:hint="@string/origen"
                    android:padding="10dp"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/pointer" />

                <TextView
                    android:id="@+id/lblDestinationSearch"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/input"
                    android:elegantTextHeight="true"
                    android:hint="@string/destino"
                    android:padding="10dp"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/pointer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnSwitchRouteSearch"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/input"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="⇅"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>


        <!-- Segundo EditText -->

        <!-- Tercer EditText -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblDateSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/input"
                    android:drawablePadding="4dp"
                    android:elegantTextHeight="true"
                    android:hint="@string/fecha"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:drawableStartCompat="@drawable/date" />
            </LinearLayout>

        </LinearLayout>

        <!-- Botón -->

        <Button
            android:id="@+id/btnSearchRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_custom_background"
            android:elevation="20dp"
            android:fontFamily="@font/robotoblack"
            android:padding="10dp"
            android:text="@string/buscar_viaje"
            android:textColor="#ffffff"
            android:textFontWeight="900"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elegantTextHeight="true"
                android:fontFamily="@font/noto"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/mensaje_buscar"
                android:textAlignment="center"
                android:textColor="#6E6F70"
                android:textFontWeight="100"
                android:textSize="20sp"
                android:textStyle="normal" />





        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="4dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/background"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buscar"
                android:textSize="6sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnPublish"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_add_green"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Publish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Publicar"
                android:textSize="6sp"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnHistory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_history"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="History" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tus viajes"
                android:textSize="6sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnMessages"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_messages"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Messages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mensajes"
                android:textSize="6sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_profile"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perfil"
                android:textSize="6sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>

